--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gpa-calculator-react",
+  "name": "transcript-calculator",
   "private": true,
-  "version": "3.0.0",
+  "version": "4.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
